fix: Fix text positioning on images on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -399,7 +399,11 @@ footer {
         margin-right: 10px;
         
 } 
-    
+
+.centered {
+    right: 8%;
+    bottom: 16%;
+}
 }
 
 @keyframes imgzoom {
